--- a/src/views/DashboardScreen.form
+++ b/src/views/DashboardScreen.form
@@ -78,20 +78,20 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
-                      <Component id="btnCustomer" min="-2" pref="89" max="-2" attributes="0"/>
+                      <Component id="btnCustomer" min="-2" pref="97" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="btnMaterial" min="-2" pref="89" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="btnLabor" min="-2" pref="89" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="78" max="-2" attributes="0"/>
                       <Component id="btnQuotation" min="-2" pref="85" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="64" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="btnContract" min="-2" pref="84" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="btnLaborCharge" min="-2" pref="88" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="54" max="-2" attributes="0"/>
                       <Component id="btnReport" min="-2" pref="88" max="-2" attributes="0"/>
-                      <EmptySpace pref="436" max="32767" attributes="0"/>
+                      <EmptySpace pref="396" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -99,15 +99,17 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="btnReport" pref="0" max="32767" attributes="0"/>
-                          <Component id="btnLaborCharge" pref="0" max="32767" attributes="0"/>
-                          <Component id="btnContract" pref="0" max="32767" attributes="0"/>
-                          <Component id="btnCustomer" pref="0" max="32767" attributes="0"/>
-                          <Group type="103" groupAlignment="1" attributes="0">
-                              <Component id="btnMaterial" min="-2" pref="84" max="-2" attributes="0"/>
-                              <Component id="btnLabor" min="-2" pref="84" max="-2" attributes="0"/>
-                              <Component id="btnQuotation" min="-2" pref="84" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="1" attributes="0">
+                          <Component id="btnQuotation" min="-2" pref="84" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                              <Component id="btnReport" pref="0" max="32767" attributes="0"/>
+                              <Component id="btnLaborCharge" pref="0" max="32767" attributes="0"/>
+                              <Component id="btnContract" pref="0" max="32767" attributes="0"/>
+                              <Component id="btnCustomer" pref="0" max="32767" attributes="0"/>
+                              <Group type="103" groupAlignment="1" attributes="0">
+                                  <Component id="btnMaterial" alignment="0" min="-2" pref="84" max="-2" attributes="0"/>
+                                  <Component id="btnLabor" alignment="0" min="-2" pref="84" max="-2" attributes="0"/>
+                              </Group>
                           </Group>
                       </Group>
                       <EmptySpace min="0" pref="14" max="32767" attributes="0"/>
