--- a/src/views/DashboardScreen.form
+++ b/src/views/DashboardScreen.form
@@ -106,10 +106,8 @@
                               <Component id="btnLaborCharge" pref="0" max="32767" attributes="0"/>
                               <Component id="btnContract" pref="0" max="32767" attributes="0"/>
                               <Component id="btnCustomer" pref="0" max="32767" attributes="0"/>
-                              <Group type="103" groupAlignment="1" attributes="0">
-                                  <Component id="btnMaterial" alignment="0" min="-2" pref="84" max="-2" attributes="0"/>
-                                  <Component id="btnLabor" alignment="0" min="-2" pref="84" max="-2" attributes="0"/>
-                              </Group>
+                              <Component id="btnMaterial" alignment="0" min="-2" pref="84" max="-2" attributes="0"/>
+                              <Component id="btnLabor" alignment="0" min="-2" pref="84" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace min="0" pref="14" max="32767" attributes="0"/>
@@ -255,7 +253,7 @@
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace pref="12" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="btnExit" min="-2" max="-2" attributes="0"/>
                           <Component id="btnSettings" min="-2" max="-2" attributes="0"/>
